Hide body overflow to fix double scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,6 +39,7 @@ a:hover {
 } */
 
 body {
+  overflow: hidden;
   /* margin: 0;
   display: flex;
   place-items: center; */
